2009-06-14  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=26362

        Fix an issue noted on quirksmode.com where dynamically adding siblings does not
        update :nth-child style correctly.

        Test: fast/css/nth-child-dynamic.html

        * dom/Node.h:
        Change diff() to take const RenderStyle*
        * dom/Node.cpp:
        (WebCore::Node::diff):
        When comparing styles to decide whether to detach and reattach, we
        need to look at whether the pseudoclass-related data in the style
        changed (since RenderStyle::diff doesn't check this).

        * rendering/style/RenderStyle.cpp:
        (WebCore::RenderStyle::getCachedPseudoStyle):
        (WebCore::RenderStyle::inheritedNotEqual):
        Make these methods const.
        * rendering/style/RenderStyle.h:
        (WebCore::InheritedFlags::styleType):
        (WebCore::InheritedFlags::pseudoClassStateEquivalent):
        Make methods const.
        Add new method that compares the pseudoclass-related members.

Canonical link: https://commits.webkit.org/36489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44671 268f45cc-cd09-0410-ab3c-d52691b4dbfc