WebCore/dom/Node.h
@@ -106,7 +106,7 @@ public:
     static void dumpStatistics();
 
     enum StyleChange { NoChange, NoInherit, Inherit, Detach, Force };    
-    static StyleChange diff(RenderStyle*, RenderStyle*);
+    static StyleChange diff(const RenderStyle*, const RenderStyle*);
 
     Node(Document*, bool isElement = false, bool isContainer = false, bool isText = false);
     virtual ~Node();
